# purchase-tracking-app

backend/: .env  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
backend/admin_api/: urls.py  views.py
backend/purchase_tracking_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_mongo_connection.py
backend/transactions/: models.py  ocr_service.py  serializers.py  urls.py  views.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
